--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -13,12 +13,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install C++ compiler and clang-tidy
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y g++ clang-tidy
-
-    - name: Run Linting
-      run: |
-        clang-tidy --version
-        clang-tidy ./src/**/*.cpp -- -std=c++17
+    - name: C++ Lint
+      uses: cpp-linter/cpp-linter-action@v1
+      with:
+        clang-tidy-version: '10'
+        cpp-standard: 'c++17'
